Version 0.24.6
--------------
- Complete review of the source code, refactoring, strict coding style policy adopted.

Version 0.24.5
--------------
- Contains the new EY library of components.
- Fixed bug #56 (some components do not appear in the preview).
- Fixed bug #61 (multiple selection using Commands on MacOSX).
- Fixed bug #62 (wrong UTF-8 tag in SVN export).
- Fixed bug #60 (PDF export does not support UTF-8 characters) with some limitations.
- Better zoom handling.
- Added the "Duplicate" command associated to Ctrl+D, Ctrl+G now shows the drawing code (it once was Ctrl+D).
- Czech translation associated to the correct locale.
- Reintroduced the "-k" option to obtain the given locale.
- Android porting.
- Check for correctness of the file extension while export. That should be enough to avoid to overwrite .fcd files when the file names are written in a wrong order during an export from CLI. Added the -f option to skip this test.

Version 0.24.4
--------------
- Complete reorganization of the source code, to improve readability as well as modularity.
- Started the porting towards Android devices. The port shares a lot of code with the original Swing application.
- More ergonomic editing of the libraries. No more drag&drop, but copy/paste for symbols. Better search.
- The layer of more than one primitive can be selected at once: either with the Parameters dialog or just by choosing a layer when elements are selected.
- New zoom levels in the list.
- Many bugs corrected.

Version 0.24.3
--------------
- You can navigate through search results in the library using the Return key and not just the arrow keys (by Mancuso Raffaele).
- Czech translation of the user interface (by Chemik582)
- Corrected bug #36 "A spline-bug with FidoCadJ 0.24"
- Corrected bug #45 "Color Print instead of Black and White print (or exported file)"
- Corrected bug #43 and #44 "Wrong component font when using a personally created component"