@@ -11,7 +11,7 @@
 <td align="center">2</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/circuit/CircuitPanel.java</td>
 <td align="center" width="5%">1</td>
-<td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=153, ATFD=231, TCC=0.04156862745098039)</a></td>
+<td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=140, ATFD=223, TCC=0.05353535353535353)</a></td>
 </tr>
 <tr bgcolor="lightgrey"> 
 <td align="center">3</td>
@@ -53,7 +53,7 @@
 <td align="center">9</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/globals/LibUtils.java</td>
 <td align="center" width="5%">1</td>
-<td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=65, ATFD=26, TCC=0.0)</a></td>
+<td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=65, ATFD=25, TCC=0.0)</a></td>
 </tr>
 <tr> 
 <td align="center">10</td>
