@@ -245,7 +245,7 @@ public final class LibUtils
         } else {
             // If the name contains a dot, we might check whether we have
             // one of the new FidoCadJ standard libraries:
-            // pcb, ihram, elettrotecnica.
+            // pcb, ihram, elettrotecnica, ey_libraries.
 
             // Obtain the library name
             String library=tlib.key.substring(0,dotpos);
@@ -257,9 +257,10 @@ public final class LibUtils
                 isStandard = true;
             } else if (extensions && "elettrotecnica".equals(library)) {
                 isStandard = true;
+            } else if (extensions && "ey_libraries".equals(library)) {
+                isStandard = true;
             }
         }
-
         return isStandard;
     }
 
@@ -325,28 +326,6 @@ public final class LibUtils
            library.contains("~")||library.contains("&")||
            library.contains(",")||library.contains(";")||
            library.contains("]")||library.contains("\"");
-    }
-
-    /** Rename a library file.
-        @param m the map containing the library.
-        @param file the name of the file to be written.
-        @param libname the previous name of the library.
-        @param libname2 the library new name.
-    */
-    public static void renameLib(Map<String, MacroDesc> m, String file,
-            String libname, String libname2)
-    {
-        try {
-            //file = file.replace(libname, libname2);
-            LibUtils.saveToFile(file + ".fcl",
-                       LibUtils.prepareText(
-                               LibUtils.getLibrary(m, libname),
-                               libname2));
-            //deleteLib(libname);
-        } catch (FileNotFoundException e) {
-            e.printStackTrace();
-        }
-
     }
 
     /** Delete a group inside a library.
@@ -454,164 +433,5 @@ public final class LibUtils
         } catch (IOException e) {
             System.out.println("Cannot save the library status.");
         }
-
     }
-
-// TODO support libs with different filenames
-
-/*public static String Languages[][] = {
-{"af","Afrikaans"},
-{"ak","Akan"},
-{"sq","Albanian"},
-{"am","Amharic"},
-{"ar","Arabic"},
-{"hy","Armenian"},
-{"az","Azerbaijani"},
-{"eu","Basque"},
-{"be","Belarusian"},
-{"bem","Bemba"},
-{"bn","Bengali"},
-{"bh","Bihari"},
-//{"xx-bork","Bork, bork, bork!"},
-{"bs","Bosnian"},
-{"br","Breton"},
-{"bg","Bulgarian"},
-{"km","Cambodian"},
-{"ca","Catalan"},
-{"chr","Cherokee"},
-{"ny","Chichewa"},
-{"zh-CN","Chinese (Simplified)"},
-{"zh-TW","Chinese (Traditional)"},
-{"zh","Chinese"},
-{"co","Corsican"},
-{"hr","Croatian"},
-{"cs","Czech"},
-{"da","Danish"},
-{"nl","Dutch"},
-//{"xx-elmer","Elmer Fudd"},
-{"en","English"},
-{"eo","Esperanto"},
-{"et","Estonian"},
-{"ee","Ewe"},
-{"fo","Faroese"},
-{"tl","Filipino"},
-{"fi","Finnish"},
-{"fr","French"},
-{"fy","Frisian"},
-{"gaa","Ga"},
-{"gl","Galician"},
-{"ka","Georgian"},
-{"de","German"},
-{"el","Greek"},
-{"gn","Guarani"},
-{"gu","Gujarati"},
-//{"xx-hacker,"Hacker"},
-{"ht","Haitian Creole"},
-{"ha","Hausa"},
-{"haw","Hawaiian"},
-{"iw","Hebrew"},
-{"hi","Hindi"},
-{"hu","Hungarian"},
-{"is","Icelandic"},
-{"ig","Igbo"},
-{"id","Indonesian"},
-{"ia","Interlingua"},
-{"ga","Irish"},
-{"it","Italiano"},
-{"ja","Japanese"},
-{"jw","Javanese"},
-{"kn","Kannada"},
-{"kk","Kazakh"},
-{"rw","Kinyarwanda"},
-{"rn","Kirundi"},
-{"xx-klingon  Klingon"},
-{"kg","Kongo"},
-{"ko","Korean"},
-{"kri","Krio (Sierra Leone)"},
-{"ku","Kurdish"},
-{"ckb","Kurdish (Soranî)"},
-{"ky","Kyrgyz"},
-{"lo","Laothian"},
-{"la","Latin"},
-{"lv","Latvian"},
-{"ln","Lingala"},
-{"lt","Lithuanian"},
-{"loz","Lozi"},
-{"lg","Luganda"},
-{"ach","Luo"},
-{"mk","Macedonian"},
-{"mg","Malagasy"},
-{"ms","Malay"},
-{"ml","Malayalam"},
-{"mt","Maltese"},
-{"mi","Maori"},
-{"mr","Marathi"},
-{"mfe","Mauritian Creole"},
-{"mo","Moldavian"},
-{"mn","Mongolian"},
-{"sr-ME","Montenegrin"},
-{"ne","Nepali"},
-{"pcm","Nigerian Pidgin"},
-{"nso","Northern Sotho"},
-{"no","Norwegian"},
-{"nn","Norwegian (Nynorsk)"},
-{"oc","Occitan"},
-{"or","Oriya"},
-{"om","Oromo"},
-{"ps","Pashto"},
-{"fa","Persian"},
-//{"xx-pirate","Pirate"},
-{"pl","Polish"},
-{"pt-BR","Portuguese (Brazil)"},
-{"pt-PT","Portuguese (Portugal)"},
-{"pa","Punjabi"},
-{"qu","Quechua"},
-{"ro","Romanian"},
-{"rm","Romansh"},
-{"nyn","Runyakitara"},
-{"ru","Russian"},
-{"gd","Scots Gaelic"},
-{"sr","Serbian"},
-{"sh","Serbo-Croatian"},
-{"st","Sesotho"},
-{"tn","Setswana"},
-{"crs","Seychellois Creole"},
-{"sn","Shona"},
-{"sd","Sindhi"},
-{"si","Sinhalese"},
-{"sk","Slovak"},
-{"sl","Slovenian"},
-{"so","Somali"},
-{"es","Spanish"},
-{"es-419","Spanish (Latin American)"},
-{"su","Sundanese"},
-{"sw","Swahili"},
-{"sv","Swedish"},
-{"tg","Tajik"},
-{"ta","Tamil"},
-{"tt","Tatar"},
-{"te","Telugu"},
-{"th","Thai"},
-{"ti","Tigrinya"},
-{"to","Tonga"},
-{"lua","Tshiluba"},
-{"tum","Tumbuka"},
-{"tr","Turkish"},
-{"tk","Turkmen"},
-{"tw","Twi"},
-{"ug","Uighur"},
-{"uk","Ukrainian"},
-{"ur","Urdu"},
-{"uz","Uzbek"},
-{"vi","Vietnamese"},
-{"cy","Welsh"},
-{"wo","Wolof"},
-{"xh","Xhosa"},
-{"yi","Yiddish"},
-{"yo","Yoruba"},
-{"zu","Zulu"}
-};
-
-*/
-
 }
