@@ -1,10 +1,11 @@
 Version 0.24.6
 --------------
 - Complete review of the source code, refactoring, strict coding style policy adopted.
+- Library "ey_libraries" is now considered as standard library.
 
 Version 0.24.5
 --------------
-- Contains the new EY library of components.
+- Contains the new EY library of components "ey_libraries".
 - Fixed bug #56 (some components do not appear in the preview).
 - Fixed bug #61 (multiple selection using Commands on MacOSX).
 - Fixed bug #62 (wrong UTF-8 tag in SVN export).
